[gd_scene load_steps=6 format=3 uid="uid://k3551m6diwwu"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_f5vuk"]
[ext_resource type="Texture2D" uid="uid://c72vssyi3nbnd" path="res://Sprites/basecursor.png" id="2_wp3lb"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="3_jiwj5"]
[ext_resource type="Script" path="res://Scripts/IdlePlayerState.gd" id="4_8ewgj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r3yjx"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_f5vuk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_r3yjx")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]
fov = 60.0

[node name="TextureRect" type="TextureRect" parent="Neck/Camera3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wp3lb")

[node name="FrontRaycast" type="RayCast3D" parent="Neck/Camera3D"]
target_position = Vector3(0, 0, -10)

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="Neck/Camera3D"]
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="Neck/Camera3D"]

[node name="WeaponPosition" type="Marker3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.2, -1.6)

[node name="AimReach" type="Marker3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("3_jiwj5")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_8ewgj")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
